--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,16 +10,19 @@
 					<a href="/"><span class="tk_color">ТВОЙ</span>КОСМОС</a>
 				</div>
 				<div class="sections">
-					<span class="menu-widget">
+					<!-- <span class="menu-widget">
 						<span id="news_toggle_menu">новости</span>
 						<ul>
 							<li><a class="space" href="/?section=space">космос</a></li>
 							<li><a class="physics" href="/?section=physics">физика</a></li>
 							<li><a class="tech" href="/?section=tech">технологии</a></li>	
 						</ul>
-					</span>
-					<a href="/?section=article">статьи</a>
-					<a href="/?section=event">события</a>
+					</span> -->
+					<!-- <a href="/?section=article">статьи</a> -->
+					<!-- <a href="/?section=event">события</a> -->
+					<a class="nav-item space" href="/?section=space">космос</a>
+					<a class="nav-item physics" href="/?section=physics">физика</a>
+					<a class="nav-item tech" href="/?section=tech">технологии</a>
 				</div>
 			</div>
 			<div class="_regime" ng-click="toggle_news_type()" ng-show="news_type">
