добавлен новый аватар

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -61,7 +61,7 @@
 		}
 	</style>
 	
-	<link rel="icon" type="image/png" href="/images/tk.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/images/tk_site_avatar.png" sizes="32x32">
 	<%- stylesheets %>
 
 	<script>
