добавил новую картинку в опенграф

--- a/views/meta_index.ejs
+++ b/views/meta_index.ejs
@@ -7,11 +7,11 @@
 <meta name="description" content="Современное интернет издание, ежедневно выпускающее эксклюзивные научно-популярные новости" />
 <meta name="keywords" content="Научно,научный,космический,наука,новости,космос,астрономия,эксклюзив,научно-популярные" />
 
-<link rel="image_src" href="/images/tk.png" />
+<link rel="image_src" href="/images/tk_site_avatar.png" />
 
 <meta property="og:title" content="Твой Космос | Новостное научно-популярное издание о науке и космосе" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/" />
-<meta property="og:image" content="/images/tk.png" />
+<meta property="og:image" content="/images/tk_site_avatar.png" />
 <meta property="og:description" content="Современное интернет издание, ежедневно выпускающее эксклюзивные научно-популярные новости" />
 <meta property="og:site_name" content="Твой Космос" />
