--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -26,15 +26,23 @@
     margin: auto;
     background-color: white;
     z-index: 9999;
-    box-shadow: 0 2px 5px rgba(0,0,0,.5);
+    box-shadow: 0 0 5px rgba(255,255,255,.5);
     border-radius: 5px;
 
 }
 .modal-_header {
     border-radius: 5px 5px 0 0;
-    background: url(/images/space.jpg) top center;
+    /*background: url(/images/space.jpg) top center;*/
+    background: #222;
     width: 100%;
     height: 50px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,.5);
+}
+.modal-_header img {
+    width: 35px;
+    height: 35px;
+    margin-top: 7.5px;
 }
 .near {
     float: left;
