--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -17,13 +17,15 @@
      ng-class="{ _show : !news_type }">    
     <div class="fader"></div>
     <div class="tk-modal">
-        <div class="modal-_header"></div>
+        <div class="modal-_header">
+            <img src="/images/tk_logo.png">
+        </div>
         <div class="greet">
             <span>
                 <p class="hello">Приветствуем тебя, серфер!</p>
                 <p>На нашем сайте новости существуют в двух вариантах.</p>
                 <p>Хорошенько подумай и выбери свой космос.</p>
-                <i>Ты всегда сможешь поменять режим отображения ткнув на кнопку MODE.</i>
+                <i>Ты всегда сможешь поменять режим отображения ткнув на кнопку смены режима.</i>
             </span>
         </div>
         <div class="near normal" ng-click="chooseType('normal')">
