--- a/views/event-mobile.ejs
+++ b/views/event-mobile.ejs
@@ -19,7 +19,7 @@
 <div class="post">
 	<div class="image-title" style="background-image: url(<%- event_.image_preview %>)"></div>
 	<h1 class='title'><%- event_.title %></h1>
-	<div class="content"><%- event_.content %></div>
+	<div class="content"><%- event_.description %></div>
 </div>
 <div class="popular">
 	<p class="title-tag">Последние новости</p>
