исправленг баг с ивентами на мобиле

--- a/views/event-mobile.ejs
+++ b/views/event-mobile.ejs
@@ -17,7 +17,7 @@
 </script>
 
 <div class="post">
-	<div class="image-title" style="background-image: url(<%- event_.image_preview %>)"></div>
+	<div class="image-title" style="background-image: url(<%- event_.image_full %>)"></div>
 	<h1 class='title'><%- event_.title %></h1>
 	<div class="content"><%- event_.description %></div>
 </div>
