--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,9 +24,15 @@
 				</a>
 			</div>
 			<div class="menu">
-				<a class="nav-item space" href="/?section=space">космос</a>
-				<a class="nav-item physics" href="/?section=physics">физика</a>
-				<a class="nav-item tech" href="/?section=tech">технологии</a>
+				<a class="nav-item news">Новости</a>
+				<div class="slide-menu">	
+					<a class="nav-item" href="/">Все</a>
+					<a class="nav-item space" href="/?section=space">Космос</a>
+					<a class="nav-item physics" href="/?section=physics">Физика</a>
+					<a class="nav-item tech" href="/?section=tech">Технологии</a>
+				</div>
+				<a class="nav-item articles" href="/articles">Статьи</a>
+				<a class="nav-item events" href="/events">События</a>
 			</div>
 			<div class="_regime" ng-click="toggle_news_type()" ng-show="news_type">
 				<p class="usn regime">MODE</p>
