--- a/public/stylesheets/content-columns.css
+++ b/public/stylesheets/content-columns.css
@@ -21,7 +21,7 @@ div.page .misc {
 	box-sizing: border-box;	
 }
 .gray {
-	background-color: #ddd;
+	background-color: #d2d2d2;
 }
 .posts-list {
 	margin-bottom: 20px;
