--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -4,7 +4,6 @@
 	width: 100%;
 	background-color: #222;
 	position: relative;
-	box-shadow: 0 0 1px #222;
 }
 .__stars__ {
 	position: absolute;
@@ -120,20 +119,26 @@ div[class*=__star__] {
 }
 .menu {
 	padding-left: 50px;
+	position: relative;
+	overflow: hidden;
+	width: 600px;
 }
 .menu a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 16px;
+	position: relative;
 	font-family: 'RobCondLight';
 	padding: 3px 0;
 	margin: 0 5px;
-	-webkit-transition: color .4s;
-	-o-transition: color .4s;
-	transition: color .4s;
+	left: 0;
+	-webkit-transition: all .4s;
+	-moz-transition: all .4s;
+	transition: all .4s;
 }
 .menu a:hover {
 	color: #FFB52E;
+	cursor: pointer;
 }
 .menu a.selected {
 	border-bottom: 3px solid #FFB52E;
@@ -167,6 +172,33 @@ p.type-name {
 	font-size: 40px;
 	line-height: 40px;
 	text-shadow: 0px 2px 2px rgba(0,0,0,.5);
+}
+.slide-menu {
+	position: absolute;
+	top: 0;
+	left: -200px;
+	width: 250px;
+	height: 100%;
+	opacity: 0;
+	-webkit-transition: left .8s, opacity .2s;
+	-moz-transition: left .8s, opacity .2s;
+	transition: left .8s, opacity .2s;
+}
+.slide-menu a {
+	color: #ddd;
+}
+.menu.slide-menu-visible .slide-menu {
+	left: 130px;
+	opacity: 1;
+	-webkit-transition: opacity .6s .2s, left .4s;
+	-moz-transition: opacity .6s .2s, left .4s;
+	transition: opacity .6s .2s, left .4s;
+}
+.menu.slide-menu-visible .articles {
+	left: 270px;
+}
+.menu.slide-menu-visible .events {
+	left: 270px;
 }
 
 /*// mini header //*/
