--- a/views/base-mobile.ejs
+++ b/views/base-mobile.ejs
@@ -19,6 +19,12 @@
 	  _gs('GSN-754813-N');
 	</script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
+	<script src="/libs/fastclick/lib/fastclick.js"></script>
+	<script>
+		$(function() {
+		    FastClick.attach(document.body);
+		});
+	</script>
 </head>
 <style>
 	html, body {
@@ -64,8 +70,16 @@
 </body>
 	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-54121517-1', 'auto');ga('send', 'pageview',{'page':location.pathname+location.search+location.hash});</script>
 	<script>
+
 		loader_on_stage = true;
 		$(window).load(function() {
+			unwindFade();
+		})
+		setTimeout(function() {
+			unwindFade();
+		}, 1200)
+
+		var unwindFade = function() {
 			if (loader_on_stage) {
 				$('.tk_loader').animate({
 					opacity : 0
@@ -76,19 +90,7 @@
 				})
 				loader_on_stage = false;
 			}
-		})
-		setTimeout(function() {
-			if (loader_on_stage) {
-				$('.tk_loader').animate({
-					opacity : 0
-				}, 600, function() {
-					$('.tk_loader').css({
-						display: 'none'
-					})
-				})
-				loader_on_stage = false;	
-			}
-		}, 2000)
+		}
 	</script>
 
 
