добавлена страница вывода на большой экран ивентов

--- a/views/event.ejs
+++ b/views/event.ejs
@@ -18,7 +18,7 @@
 <% stylesheet("/build/css/content-columns.css") -%>
 <% stylesheet("/build/css/event-line.css") -%>
 <% stylesheet("/build/css/article-line.css") -%>
-<% stylesheet("/build/css/events.css") -%>
+<% stylesheet("/build/css/event.css") -%>
 
 <div class="page" ng-controller="eventCtrl" ng-init="init()">
 	<article class="post">
