--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -1,96 +1,49 @@
-body {
-	background-color: #3a3a3a;
+.each-event {
+	width: 33.33333%;
+	height: 260px;
+	float: left;
 }
-.container {
-	background-color: #252525;
+.each-event:hover .event-image {
+	height: 240px;
+	width: 360px;
+}
+.each-event .event-info-top {
+	height: 240px;
+	line-height: 240px;
 }
 
-div.page .post {
+.each-event .event-image {
+	width: 300px;
+	height: 200px;
+}
+
+/*// big //*/
+
+.each-event.big-event {
 	width: 100%;
-	padding: 0 10px ;
-}
-.events-column {
-	width: 50%;
-	min-height: 200px;
-}
-.post {
+	height: 700px;
+	line-height: 700px;
 	margin-bottom: 20px;
 }
-.post > div {
-	float: left;	
-}
-.image {
-	background-size: cover;
-	background-position: center center;
-	border-radius: 4px;
-	overflow: hidden;
-	width: 75%;
-}
-.image img {
+.each-event.big-event .event-image {
 	width: 100%;
+	height: 100%;
+	border-radius: initial;
 }
-.info {
-	padding: 0 0 0 10px;
-	width: 25%;
+.each-event.big-event .event-info-top {
+	height: 700px;
+	line-height: 700px;
+	-webkit-transform: translateY(0%);
+	   -moz-transform: translateY(0%);
+	        transform: translateY(0%);
 }
-.info .title {
-	font-family: 'RobCondBold';
-	font-size: 24px;
-	line-height: 28px;
-	color: #ddd;
+.each-event.big-event .event-info-top span {
+	line-height: 55px;
+	padding: 0px 50px;
 }
-.info .description {
-	font-size: 16px;
-	line-height: 22px;
-	font-family: 'RobCondLight';
-	color: #ddd;
+.each-event.big-event .event-info-top span p {
+	font-size: 50px;
 }
-.info .date {
-	height: 30px;
-	font-family: 'RobCondLight';
-	font-size: 14px;
-	padding-left: 5px;
-	line-height: 30px;
-	margin: 15px 0;
-	background-color: #555;
-	color: #ddd;
-}
-.other-mode > div.left {
-	width: 100%;
-	color: #ddd;
-}
-news.s11 {
-	width: 33.33333%;
-	height: 385px;
-}
-.article-and-news {
-	width: 75%;
-	float: left;
-}
-.article {
-	width: 66.66666%;
-	float: left;
-	padding: 10px;
-	background-color: inherit;
-}
-.posts-list {
-	background-color: #252525;
-}
-.posts-list .each-post > div {
-	color: #ddd;
-}
-.inner-container {
-	background-color: #333;
-}
-.inner-container .news_title {
-	color: #FFB52E;
-}
-.inner-container:hover .news_title {
-	color: #FFB52E;
-}
-.inner-container .description {
-	color: #ddd;
-}
-.inner-container:hover .description {
-	color: #eee;
+.each-event .event-info span p {
+	color: #fff;
 }
