--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -68,10 +68,10 @@
 		bottom: 0px;
 		left: 0;
 		width: 100%;
-		height: 111px;
-		-webkit-transition: all 0.4s;
-		-o-transition: all 0.4s;
-		transition: all 0.4s;
+		height: 145px;
+		-webkit-transition: all .3s;
+		-o-transition: all .3s;
+		transition: all .3s;
 	}
 	.header-fixed p {
 		margin: 0;
@@ -80,7 +80,8 @@
 	.header-fixed .menu > div {
 		background-color: #e5e5e5;
 		color: #222;
-		height: 25px;
+		height: 35px;
+		line-height: 35px;
 		font-size: 16px;
 		text-align: center;
 		margin: 0;
@@ -92,7 +93,8 @@
 	.header-fixed .submenu > div{
 		background-color: #bbb;
 		color: #222;
-		height: 25px;
+		height: 35px;
+		line-height: 35px;
 		font-size: 16px;
 		text-align: center;
 		margin: 0;
@@ -101,50 +103,51 @@
 		position: relative;
 	}
 	.header-fixed .submenu {
-		border-left:  4px solid #222; 
-		border-right: 4px solid #222;
 		box-sizing: border-box; 
 		-moz-box-sizing: border-box; 
 		-webkit-box-sizing: border-box; 
 		position: absolute;
-		top: -120px;
+		top: -150px;
 		left: 0;
 		width: 100%;
-		-webkit-transition: all .4s;
-		-o-transition: all .4s;
-		transition: all .4s;
+		-webkit-transition: all .3s;
+		-o-transition: all .3s;
+		transition: all .3s;
 	}
 	.header-fixed .menu .news {
 		border-bottom: 4px solid #222;
 		bottom: 0;
-		-webkit-transition: all .4s;
-		-o-transition: all .4s;
-		transition: all .4s;
+		-webkit-transition: all .3s;
+		-o-transition: all .3s;
+		transition: all .3s;
 	}
 	.header-fixed .menu .articles {
-		bottom: 41px;
+		bottom: 51px;
 	}
 	.header-fixed .menu .events {
-		bottom: 78px;
+		bottom: 98px;
 	}
 	/*// actions */
 	.header-fixed.menu-visible .menu {
-		bottom: -115px;
+		bottom: -145px;
 	}
 	.header-fixed.menu-visible .submenu {
-		top: 14px;
+		top: 7px;
 	}
 	.header-fixed.news_subview .news {
-		bottom: -148px;
+		bottom: -188px;
 	}
 	.header-fixed.news_subview .submenu {
-		top: 124px;
+		top: 144px;
 	}
 
 </style>
 
 <script>
 	$('header').on('click', function() {
+		if ($('.header-fixed').hasClass('news_subview')) {
+			$('.header-fixed').removeClass('news_subview');
+		}
 		$('.header-fixed').toggleClass('menu-visible');
 	})
 	$('.news').on('click', function() {
