--- a/views/events-list.ejs
+++ b/views/events-list.ejs
@@ -26,6 +26,7 @@
 				</div>
 				<div class="event-info-top">
 					<span>
+						<p ng-if="$index==0" class="last-event-label tk_color">Последнее событие</p>
 						<p>{{ evt.title }}</p>
 					</span>
 				</div>
