--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -3,7 +3,7 @@
 	<header>
 		<a href="/">
 			<img class="tk_logo" src="/images/tk_logo.png">
-			ТВОЙКОСМОС
+			ТВОЙ<span class="tk_color">КОСМОС</span>
 		</a>
 			<img class="menu-initer" src="/images/sandwich.png">
 	</header>
