--- a/views/index-mobile.ejs
+++ b/views/index-mobile.ejs
@@ -6,7 +6,10 @@
 		<a href="/article/<%= article._id%>">	
 			<div class="photo" style="background-image:url(<%= article.image %>)"></div>
 			<div class="text">
-				<span class="_title"><%= article.title %></span>
+				<span>
+					<p class="article-label">Статья</p>
+					<p class="_title"><%= article.title %></p> 
+				</span>
 			</div>
 		</a>
 	</div>
@@ -106,12 +109,16 @@
 		text-align: center;
 		padding: 0 10px;
 	}
-	.each-post-big .text span._title {
+	.each-post-big .text span {
 		display: inline-block;
 		font-family: 'RobCondBold';
 		font-size: 18px;
 		line-height: 20px;
 		vertical-align: middle;
+	}
+	.article-label {
+		font-size : 15px;
+		font-family: 'RobCondLight';
 	}
 
 </style>
