--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -1,11 +1,15 @@
 <div class="header-fixed">
 	<!-- <div class="bar"></div> -->
 	<header>
-		<a href="/">
+		<a href="/"style="width: 50px">
 			<img class="tk_logo" src="/images/tk_logo.png">
+		</a>
+		<a href="/" style="float:initial">
 			ТВОЙ<span class="tk_color">КОСМОС</span>
 		</a>
-			<img class="menu-initer" src="/images/sandwich.png">
+		<div class="menu-initer">
+			<img src="/images/sandwich.png">
+		</div>
 	</header>
 	<div class="menu">
 		<a><div class="news">Новости</div></a>
@@ -33,6 +37,9 @@
 	.header-fixed a {
 		text-decoration: none;
 		color: #fff;
+		height: 100%;
+		float: left;
+		display: inline-block;
 		font-family: 'RobCondBold';
 	}
 	header {
@@ -42,7 +49,7 @@
 		line-height: 50px;
 		background-color: #222;
 		box-shadow: 0 2px 4px rgba(0,0,0,.5);
-		padding: 0px 15px;
+		padding: 0 0 0 5px;
 		text-align: center;
 		-webkit-box-sizing: border-box;
 		   -moz-box-sizing: border-box;
@@ -56,10 +63,13 @@
 		background-repeat: no-repeat;
 	}
 	.tk_logo {
-		float: left;
+		/*float: left;*/
 	}
 	.menu-initer {
 		float: right;
+		height: 50px;
+		width: 50px;
+		display: inline-block;
 	}
 
 	.header-fixed .menu {
