--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -34,7 +34,7 @@
 		width: 100%;
 		z-index: 999;
 	} 
-	.header-fixed a {
+	.header-fixed header > a {
 		text-decoration: none;
 		color: #fff;
 		height: 100%;
@@ -111,6 +111,9 @@
 		font-family: 'RobCondBold';
 		padding: 6px 0;
 		position: relative;
+	}
+	.header-fixed .submenu a {
+		text-decoration: none;
 	}
 	.header-fixed .submenu {
 		box-sizing: border-box; 
