--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -6,6 +6,7 @@
 		</a>
 		<a href="/" style="float:initial">
 			ТВОЙ<span class="tk_color">КОСМОС</span>
+			<%- blocks.sectionlabel %>
 		</a>
 		<div class="menu-initer">
 			<img src="/images/sandwich.png">
@@ -39,6 +40,7 @@
 		color: #fff;
 		height: 100%;
 		float: left;
+		font-size: 15px;
 		display: inline-block;
 		font-family: 'RobCondBold';
 	}
@@ -69,7 +71,6 @@
 		float: right;
 		height: 50px;
 		width: 50px;
-		display: inline-block;
 	}
 
 	.header-fixed .menu {
@@ -88,7 +89,7 @@
 		padding: 0;
 	}
 	.header-fixed .menu  div {
-		background-color: #e5e5e5;
+		background-color: #fff;
 		color: #222;
 		height: 35px;
 		line-height: 35px;
@@ -100,9 +101,9 @@
 		width: 100%;
 		position: absolute;
 	}
-	.header-fixed .submenu  div{
-		background-color: #fff;
-		color: #222;
+	.header-fixed .submenu  div {
+		background-color: #222;
+		color: #fff;
 		height: 35px;
 		line-height: 35px;
 		font-size: 16px;
