--- a/views/articles-list-mobile.ejs
+++ b/views/articles-list-mobile.ejs
@@ -1,5 +1,6 @@
 <%- layout('base-mobile') %>
 <% block('meta', partial('meta_index')) -%>
+<% block('sectionlabel', '| СТАТЬИ') -%>
 
 <div class="content">
 	<% var L = articles.length; for (var i=0; i< L; i++) { %>
@@ -7,7 +8,10 @@
 			<a href="/article/<%= articles[i]._id%>">	
 				<div class="photo" style="background-image:url(<%= articles[i].image %>)"></div>
 				<div class="text">
-					<span class="_title"><%= articles[i].title %></span>
+					<span>
+						<p class="article-label">Статья</p>
+						<p class="_title"><%= articles[i].title %></p>
+					</span>
 				</div>
 			</a>
 		</div>
@@ -86,12 +90,17 @@
 		text-align: center;
 		padding: 0 10px;
 	}
-	.each-post-big .text span._title {
+	.each-post-big .text span {
 		display: inline-block;
 		font-family: 'RobCondBold';
 		font-size: 18px;
 		line-height: 20px;
 		vertical-align: middle;
+	}
+	.article-label {
+		font-size : 15px;
+		font-family: 'RobCondLight';
+		line-height: 20px;
 	}
 
 </style>
