--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -17,7 +17,7 @@
 }
 .tk-modal {
     width: 600px;
-    height: 550px;
+    height: 500px;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -25,6 +25,7 @@
     right: 0;
     margin: auto;
     background-color: white;
+    /*background-color: #E5E5E5;*/
     z-index: 9999;
     box-shadow: 0 0 5px rgba(255,255,255,.5);
     border-radius: 5px;
