--- a/views/base.ejs
+++ b/views/base.ejs
@@ -12,9 +12,12 @@
 	<script src="/libs/angular-animate.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
-	<script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error=console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
+	<!--<script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error=console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>-->
 	<script>
 		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
+		tk.controller('tkHelper', [ '$scope', '$rootScope', 'localStorageService', function($scope, $rootScope, localStorageService) {
+
+		}])
 	</script> 
 	<%- scripts%>
 	<script src="/libs/angular-ui-tinymce/src/tinymce.js"></script>
@@ -59,6 +62,36 @@
 			user-select: initial;
 			cursor: initial;
 		}
+		.tk-mode-helper {
+			position: relative;
+			width: 100%;
+			height: 50px;
+			line-height: 50px;
+			-webkit-transition: top 0.4s;
+			-moz-transition: top 0.4s;
+			transition: top 0.4s;
+			padding: 0 20px;
+			border-bottom: 4px solid #FFB52E;
+		}
+		.tk-mode-helper span {
+			line-height: 20px;
+			display: inline-block;
+			vertical-align: middle;
+		}
+		.tk-mode-helper span p {
+			font-family: 'RobCondBold';
+			font-size: 16px;
+		}
+		.tk-mode-helper:after {
+			content: '';
+			position: absolute;
+			top: 100%;
+			right: 100px;
+			z-index: 999;
+			border-left: 10px solid transparent;
+			border-right: 10px solid transparent;
+			border-top: 10px solid #FFB52E;
+		}
 	</style>
 	
 	<!-- <link rel="icon" type="image/png" href="/images/tk_site_avatar.png" sizes="32x32"> -->
@@ -75,11 +108,18 @@
 </head>
 	<body ng-app="tvoyKosmos">
 		<% try { if (!light) { %>
-			<%- partial('modal')%>
+			<%- partial('modal_sn')%>
 		<% }} catch(e) { %>
-			<%- partial('modal')%>
+			<%- partial('modal_sn')%>
 		<% } %>
 		<div class="container">	
+			<div ng-controller="tkHelper" 
+				 ng-show="!gotInLs"
+				 class="tk-mode-helper tk_bg">
+				<span>
+					<p>Для полноты ваших ощущений на нашем сайте существует 2 режима новостей. Единожды нажав, вы сразу поймете что к чему.</p>
+				</span>
+			</div>
 			<%- partial('header') %>	
 			<%- body %>
 			<%- partial('footer') %>
@@ -89,5 +129,17 @@
 
 	</body>
 	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-54121517-1', 'auto');ga('send', 'pageview',{'page':location.pathname+location.search+location.hash});</script>
+
+	<div id="vk_api_transport"></div>
+	<script>
+	setTimeout(function() {
+	    var el = document.createElement("script");
+	    el.type = "text/javascript";
+	    el.src = "http://vkontakte.ru/js/api/openapi.js";
+	    el.async = true;
+	    document.getElementById("vk_api_transport").appendChild(el);
+	}, 0);
+
+	</script>
 
 </html>
