--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -1,8 +1,11 @@
 .modal-high {
-    opacity: 1;
+    opacity: 0;
     display: none;
     z-index: 9999;
     position: relative;
+    -webkit-transition: opacity .5s;
+    -o-transition: opacity .5s;
+    transition: opacity .5s;
 }
 .modal-high p {
     padding: 0;
@@ -37,8 +40,17 @@
     background: #222;
     width: 100%;
     height: 50px;
+    position: relative;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0,0,0,.5);
+}
+.exiter {
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    color: #fff;
+    font-family: 'RobCondBold';
+
 }
 .modal-_header img {
     width: 35px;
@@ -102,7 +114,7 @@
     padding: 0 20px;
 }
 .greet span {
-    line-height: 25px;
+    line-height: 27px;
     font-size: 20px;
     /*font-weight: 700;*/
     font-family: 'RobCondBold';
@@ -128,7 +140,7 @@
     border-bottom-right-radius: 5px;
 }
 ._show {
-    display: block;
+    opacity: 1;
 }
 
 @media screen and (max-width:500px) and (orientation:portrait) {
