изменение названия раздела физика на наука

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,7 +28,7 @@
 				<div class="slide-menu">	
 					<a class="nav-item" href="/">Все</a>
 					<a class="nav-item space" href="/?section=space">Космос</a>
-					<a class="nav-item physics" href="/?section=physics">Физика</a>
+					<a class="nav-item physics" href="/?section=physics">Наука</a>
 					<a class="nav-item tech" href="/?section=tech">Технологии</a>
 				</div>
 				<a class="nav-item articles" href="/articles">Статьи</a>
