--- a/views/base.ejs
+++ b/views/base.ejs
@@ -12,7 +12,6 @@
 	<script src="/libs/angular-animate.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
-	<script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error=console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
 	<script>
 		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
 		tk.controller('tkHelper', [ '$scope', '$rootScope', 'localStorageService', function($scope, $rootScope, localStorageService) {
@@ -20,6 +19,8 @@
 		}])
 	</script> 
 	<%- scripts%>
+	<script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error=console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}
+	</script>
 	<script src="/libs/angular-ui-tinymce/src/tinymce.js"></script>
 
 	<link rel="stylesheet" href="/build/css/fonts.css">
