--- a/public/javascripts/templates/news_element.html
+++ b/public/javascripts/templates/news_element.html
@@ -43,4 +43,5 @@
 	 		<p>{{ news.description_special }}</p>
 	 	</div>
 	</div>
+	<div ng-if="news.special" class="special_mark">{{ news.special }}</div>
 </a>
