--- a/views/footer-mobile.ejs
+++ b/views/footer-mobile.ejs
@@ -23,6 +23,13 @@
 		<span>
 			<p style="margin-bottom:5px">ТВОЙ КОСМОС</p>
 			<span>&copy; 2014 Твой Космос. Научно-популярное интернет-издание о событиях в сфере физики, космоса и технологии. Все права на тексты принадлежат изданию.</span>
+			<p class="divider"></p>
+			<p class="webTerror">
+				<a href="http://web-terror.com" target="_blank">
+					<b>ВЕБ ТЕРРОР</b>
+					<span>студия</span>
+				</a>
+			</p>
 		</span>
 	</div>
 
